2009-11-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Unit test download commands
        https://bugs.webkit.org/show_bug.cgi?id=31923

        Adds download_unittest and fixes a bug found while testing.

        * Scripts/modules/commands/commandtest.py:
        * Scripts/modules/commands/download.py:
            Fixed a bug where we'd throw an error because [].append returns
            None.
        * Scripts/modules/commands/download_unittest.py: Added.
        * Scripts/modules/mock_bugzillatool.py:
        * Scripts/run-webkit-unittests:

2009-11-27  Adam Barth  <abarth@webkit.org>

        Unreviewed "build" fix found while writing unit tests.

        * Scripts/modules/commands/download.py:

2009-11-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Kill WebKitLandingScripts
        https://bugs.webkit.org/show_bug.cgi?id=31904

        Step 6: Kill the rest.

        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:
        * Scripts/modules/commands/queries.py:
        * Scripts/modules/commands/upload.py:
        * Scripts/modules/landingsequence.py:
        * Scripts/modules/scm.py:
        * Scripts/modules/webkitlandingscripts.py: Removed.

2009-11-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Unit test upload commands
        https://bugs.webkit.org/show_bug.cgi?id=31903

        Adds unit tests for all but two of the upload commands.  The two
        remaining ones are more difficult.  I'll return to them later.  The
        goal of these tests is just to run the commands.  We can test more
        detailed behavior later.

        * Scripts/modules/commands/commandtest.py:
        * Scripts/modules/commands/upload.py:
        * Scripts/modules/commands/upload_unittest.py:
        * Scripts/modules/mock.py: Added.
        * Scripts/modules/mock_bugzillatool.py:

2009-11-26  Adam Barth  <abarth@webkit.org>
