@@ -2,6 +2,16 @@
 
         Reviewed by Eric Seidel.
 
+        [bzt] unit test ApplyPatches and ApplyAttachment
+        https://bugs.webkit.org/show_bug.cgi?id=31935
+
+        * Scripts/modules/commands/download.py:
+        * Scripts/modules/commands/download_unittest.py:
+
+2009-11-27  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         [bzt] Unit test download commands
         https://bugs.webkit.org/show_bug.cgi?id=31923
 
